2010-06-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New tests, exposing bugs in Automake Yacc/Lex support w.r.t.
	$(AM_FLAGS) and $(FLAGS) precedence.
	* tests/lflags.test: New test, check that user $(LFLAGS) takes
	precedence over automake (AM_LFLAGS) and (foo_LFLAGS).  Still
	xfailing.
	* tests/lflags2.test: Likewise.
	* tests/yflags.test: New test, check that user $(YFLAGS) takes
	precedence over automake (AM_YFLAGS) and (foo_YFLAGS).  Still
	xfailing.
	* tests/yflags2.test: Likewise.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Extended accordingly.

2010-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Modernize, improve and extend tests `suffix*.test'.
	* tests/suffix3.test: Enable `errexit' shell flag, and related
	changes.
	* tests/suffix4.test: Likewise.
	* tests/suffix6.test: Likewise, and do not create a useless dummy
	source file.
	* tests/suffix7.test: Likewise.
	* tests/suffix5.test: Enable `errexit' shell flag, and related
	changes.  Make grepping of Makefile.in slighty stricter.
	* tests/suffix.test: Enable `errexit' shell flag, and related
	changes.  Also, do not redirect grep output to /dev/null, as this
	might unmotivatedly hide useful information.
	* tests/suffix2.test: Move setting of `errexit' shell flag earlier
	in the script (just after inclusion of ./defs).  Use a more
	idiomatic way to count text occurrences in Makefile.in with
	grep.  Do not create useless dummy source files.
	* tests/suffix10.test: Ensure verbose printing of captured make
	stdout.  Minor cosmetic changes.
	* tests/suffix8.test: Likewise.  Also, drop useless call to the
	env(1) utility, and make grepping of make output stricter by using
	$FGREP rather than plain grep.
	* tests/suffix11.test: Likewise.
	* tests/suffix12.test: Likewise.
	* tests/suffix9.test: Prefet cat + here-doc over echo to append to
	the `configure.in' stub.  Cosmetic changes.
	* tests/suffix13.test: Cosmetic spacing change.

2010-06-13  Stefano Lattarini  <stefano.lattarini@gmail.com>