@@ -832,7 +832,7 @@ register_language ('name' => 'yacc',
 		   'Name' => 'Yacc',
 		   'config_vars' => ['YACC'],
 		   'flags' => ['YFLAGS'],
-		   'compile' => '$(YACC) $(YFLAGS) $(AM_YFLAGS)',
+		   'compile' => '$(YACC) $(AM_YFLAGS) $(YFLAGS)',
 		   'ccer' => 'YACC',
 		   'compiler' => 'YACCCOMPILE',
 		   'extensions' => ['.y'],
@@ -849,7 +849,7 @@ register_language ('name' => 'yaccxx',
 		   'flags' => ['YFLAGS'],
 		   'ccer' => 'YACC',
 		   'compiler' => 'YACCCOMPILE',
-		   'compile' => '$(YACC) $(YFLAGS) $(AM_YFLAGS)',
+		   'compile' => '$(YACC) $(AM_YFLAGS) $(YFLAGS)',
 		   'extensions' => ['.y++', '.yy', '.yxx', '.ypp'],
 		   'output_extensions' => sub { (my $ext = $_[0]) =~ tr/y/c/;
 						return ($ext,) },
@@ -863,7 +863,7 @@ register_language ('name' => 'lex',
 		   'config_vars' => ['LEX'],
 		   'rule_file' => 'lex',
 		   'flags' => ['LFLAGS'],
-		   'compile' => '$(LEX) $(LFLAGS) $(AM_LFLAGS)',
+		   'compile' => '$(LEX) $(AM_LFLAGS) $(LFLAGS)',
 		   'ccer' => 'LEX',
 		   'compiler' => 'LEXCOMPILE',
 		   'extensions' => ['.l'],
@@ -877,7 +877,7 @@ register_language ('name' => 'lexxx',
 		   'config_vars' => ['LEX'],
 		   'rule_file' => 'lex',
 		   'flags' => ['LFLAGS'],
-		   'compile' => '$(LEX) $(LFLAGS) $(AM_LFLAGS)',
+		   'compile' => '$(LEX) $(AM_LFLAGS) $(LFLAGS)',
 		   'ccer' => 'LEX',
 		   'compiler' => 'LEXCOMPILE',
 		   'extensions' => ['.l++', '.ll', '.lxx', '.lpp'],
