@@ -21,6 +21,11 @@ Bugs fixed in 1.11.0a:
 
 * Long standing bugs:
 
+  - Automake variables $(AM_LFLAGS) and $(AM_YFLAGS) took precedence over
+    user variables $(FLAGS) and $(YFLAGS) (respectively).  This was in
+    contrast with both reasonable user's expectations and the Automake
+    manual; so the precedence is now the other way round.
+
   - On Darwin 9, `pythondir' and `pyexecdir' pointed below `/Library/Python'
     even if the `--prefix' argument pointed outside of a system directory.
     AM_PATH_PYTHON has been fixed to ignore the value returned from python's
