@@ -1,5 +1,13 @@
 2010-06-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Fix bugs in Automake Yacc/Lex support w.r.t. $(AM_FLAGS) and
+	$(FLAGS) precedence.
+	* automake.in: Fix registration of languages "Lex", "Lex (C++)",
+	"Yacc" and "Yacc (C++)", so that $(LFLAGS) has precedence over
+	$(AM_LFLAGS) and $(YFLAGS) has precedence over $(AM_YFLAGS).
+	* tests/Makefile.am (XFAIL_TESTS): Updated accordingly.
+	* NEWS: Updated.
+
 	New tests, exposing bugs in Automake Yacc/Lex support w.r.t.
 	$(AM_FLAGS) and $(FLAGS) precedence.
 	* tests/lflags.test: New test, check that user $(LFLAGS) takes
